# backend_in_rust

./: Cargo.toml  Rocket.toml  diesel.toml
src/: controllers.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/bin_controllers_tests/: delete_post.rs  lib.rs  publish_post.rs  show_posts.rs  write_post.rs
src/controllers/: posts.rs
src/database/: mod.rs
src/models/: posts.rs
src/templates/: index.hbs
