[package]
name = "backend_in_rust"
version = "0.1.0"
authors = ["Fernando Marca Magalhães <59258828+fernandomarca@users.noreply.github.com>"]
edition = "2018"
default-run = "main"

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "*"
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.15.0"
tokio = { version = "1.3", features = ["full"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = true
features = ["handlebars_templates", "json"]
